--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </noscript>
     <div id="loading-bg">
       <div class="loading-logo">
-        <img src="<%= BASE_URL %>logo.png" alt="Logo">
+        <img src="<%= BASE_URL %>ifm.png" alt="Logo" style="margin-top: -20px; height: 90px;">
       </div>
       <div class="loading">
         <div class="effect-1 effects"></div>
